# informational-system

./: .gitignore  DockerFile  Dockerfile  LICENSE.md  README.md  pyproject.toml  requirements.txt
app/: main.py
app/routers/: books_router.py
